--- a/styles/general.css
+++ b/styles/general.css
@@ -1,6 +1,34 @@
-body{
+html, body{
 	margin: 0;
 	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+main{
+	display: flex;
+	justify-content: center;	
+	padding-top:7em;
+/*	background: #fff;*/
+	width: 100%;
+	height: 100%;
+}
+#main-center{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+	padding: 0;
+	width: 70%;
+	height: 80%;	
+/*	background: #fcf;*/
+	border-radius: 0.5em;
+}
+#graph-holder{
+	width: 90%;
+	height: 90%;
+}
+#xml{
+	display: none
 }
 .header-wrapper{
 	position: absolute;
@@ -17,7 +45,7 @@ body{
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	text-decoration: none;
 	text-transform: uppercase;
-	color: #fff;
+	color:#000
 }
 .nav-ul{
 	display: flex;
@@ -33,10 +61,10 @@ body{
 	justify-content: center;
 	height: 3em;
 	width: 6em;
-	background: #1E90FF;
+	background: #fff;
 	text-align: center;
-	border-radius: 0.5em;
+	border: 1px solid #333;
 }
 .nav-item:hover{
-	background: #4682B4;
+	border: 1px solid #33f;
 }
